// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strong [[]] is not strong: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "[[]]",
        "text": "[[]]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strong Simple strong: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "nodes": Array [
          Object {
            "raw": "Simple strong",
            "text": "Simple strong",
            "type": "plain",
          },
        ],
        "raw": "[[Simple strong]]",
        "type": "strong",
      },
    ],
    "type": "line",
  },
]
`;
